Roadmap slider updates:   - Wrapped each items with `<div class="inner scroller">` element   - Used `transform translateX` style to change the position of the     element on click/change instead of `scrollLeft` position     (Because chromium browsers no longer support changing `scrollLeft`     position from javascript when the container has `overflow: hidden`     present)   - Added transition to transform for timeline and story inner container

--- a/src/views/about/Roadmap.scss
+++ b/src/views/about/Roadmap.scss
@@ -88,11 +88,16 @@
 
 
   .ui.checked.timeline.list {
-    padding: 48px 0 108px;
-    display: flex;
-    flex-direction: row;
     scroll-behavior: smooth;
     overflow: auto;
+    
+    .inner.scroller {
+      padding: 48px 0 108px;
+      display: flex;
+      flex-direction: row;
+      
+      transition: transform 0.2s ease-in-out;
+    }
 
     .item {
       position: relative;
@@ -212,11 +217,17 @@
   }
 
   .ui.timeline.story.list {
-    display: flex;
     scroll-behavior: smooth;
     overflow: auto;
-    padding: 24px 0 0 0;
+    
+    
+    .inner.scroller {
+      display: flex;
+      flex-direction: row;
+      padding: 24px 0 0 0;
 
+      transition: transform 0.2s ease-in-out;
+    }
 
 
     .story.item {
